# Cluster

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  appSettings.hpp  displayFeatures.cpp  main.cpp  mainWindow_events.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressdialog.cpp  progressdialog.h  progressdialog.ui  sortImages.cpp
extLibs/: CMakeLists.txt
extLibs/mathtoolbox/: CMakeLists.txt  Doxyfile.in
extLibs/mathtoolbox/include/mathtoolbox/: classical-mds.hpp  numerical-optimization.hpp
extLibs/pyclustering/: CMakeLists.txt  Doxyfile.in
extLibs/pyclustering/src/cluster/: dbscan.cpp
magic/: CMakeLists.txt
magic/include/: ImageUtils.hpp  Pipeline.hpp  Types.hpp
magic/include/Clustering/: ClusteringAlgorithm.hpp  DBSCAN.hpp  K-Means.hpp  K-Medians.hpp  ROCK.hpp
magic/include/DimensionRedox/: DimensionalityRedox.hpp  MDS.hpp
magic/include/FeatureExtractors/: ColorWise.hpp  FeatureExtractor.hpp  GlobalHist.hpp  OpenCV_Descriptors.hpp
magic/include/Magic/: ImageUtils.hpp  Pipeline.hpp
magic/include/Magic/Clustering/: ClusteringAlgorithm.hpp  ROCK.hpp
magic/include/Magic/DimensionRedox/: DimensionalityRedox.hpp  MDS.hpp
magic/include/Magic/FeatureExtractors/: FeatureExtractor.hpp
magic/src/: ImageUtils.cpp
magic/src/Clustering/: ClusteringAlgorithm.cpp  DBSCAN.cpp  K-Means.cpp  K-Medians.cpp  ROCK.cpp
magic/src/DimensionRedox/: DimRedoxFactory.cpp  MDS.cpp
magic/src/FeatureExtractors/: FeatureExtractor.cpp  GlobalHistogram.cpp  OpenCV_Descriptors.cpp
magic/src/Pipeline/: Clustering.cpp  Data.cpp  FeatureExtractor.cpp  FeatureReduction.cpp  ImageLoader.cpp  Pipeline.cpp  Preprocessor.cpp  Process.cpp  Status.cpp  Update.cpp
utils/: CMakeLists.txt
utils/include/: utils.hpp
utils/include/utils/: utils.hpp
utils/src/: utils.cpp
